small spacing fixes

--- a/src/composites/TreeDisplay/nodeDescriptionPanel/NodeDescriptionPanel.css
+++ b/src/composites/TreeDisplay/nodeDescriptionPanel/NodeDescriptionPanel.css
@@ -52,6 +52,10 @@
   width: 10px;
   color: gray;
 }
+.info-block{
+  margin-left: 1%;
+  margin-bottom: 0.05%;
+}
 
 .info-block:hover .external-link-icon {
   display: inline-block;
